Back to Top button fix

--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
         <footer>
             <p>Developed by Sergey Reizman - 2025</p>
         </footer>
-        <a href="https://my-simple-portfolio-sergey.netlify.app/" target="_blank" class="transparent-button">Visit My Portfolio</a>
-        <button class="back-to-top-button" onclick="scrollToTop()" aria-label="Back to Top">Back to Top</button>
+        <a href="https://my-simple-portfolio-sergey.netlify.app/" target="_blank"
+            class="transparent-button">Visit My Portfolio</a>
+        <button class="back-to-top-button" id="backToTopBtn" aria-label="Back to Top">Back to Top</button>
     </div>
     <script src="calendar.js"></script>
 </body>
