adding ocean view theme

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!-- Header with the title of the calendar -->
         <h1 id="calendar-title">Interactive Calendar</h1>
 
-        <!-- Controls for navigating the calendar and clearing events -->
+        <!-- Controls for navigating the calendar -->
         <div class="controls">
             <!-- Button to navigate to the previous year -->
             <button class="transparent-button" id="prev-year-btn" aria-label="Previous Year">Previous Year</button>
@@ -31,21 +31,30 @@
             <button class="transparent-button" id="next-year-btn" aria-label="Next Year">Next Year</button>
         </div>
 
-        <!-- Controls for clearing events and toggling dark mode -->
+        <!-- Controls for toggling views and clearing events -->
         <div class="controls">
             <!-- Button to clear all events from the calendar -->
             <button class="transparent-button" id="clear-events-btn" aria-label="Clear All Events">Clear All Events</button>
 
             <!-- Button to toggle dark mode for the calendar -->
             <button class="transparent-button" id="dark-mode-toggle" aria-label="Toggle Dark Mode">Dark Mode</button>
+
+            <!-- Button to toggle ocean view mode for the calendar -->
+            <button class="transparent-button" id="ocean-view-toggle" aria-label="Toggle Ocean View">Ocean View</button>
         </div>
 
         <!-- Table structure for the calendar -->
         <table>
             <thead>
-                <!-- Table header with title -->
+                <!-- Table header with days of the week -->
                 <tr>
-                    <th colspan="7">Calendar</th>
+                    <th>Sunday</th>
+                    <th>Monday</th>
+                    <th>Tuesday</th>
+                    <th>Wednesday</th>
+                    <th>Thursday</th>
+                    <th>Friday</th>
+                    <th>Saturday</th>
                 </tr>
             </thead>
             <!-- Body of the calendar table where the days will be populated -->
