Modal Window for Event Management

--- a/index.html
+++ b/index.html
@@ -61,6 +61,17 @@
             <tbody id="calendar-body"></tbody>
         </table>
 
+        <!-- Modal for managing events -->
+        <div id="event-modal" class="modal">
+            <div class="modal-content">
+                <span class="close-button" aria-label="Close Modal">&times;</span>
+                <h2 id="modal-title">Events for</h2>
+                <div id="event-list" class="event-list"></div>
+                <input type="text" id="event-input" placeholder="Enter new event">
+                <button id="add-event-btn" aria-label="Add Event">Add Event</button>
+            </div>
+        </div>
+
         <!-- Footer with developer credits -->
         <footer>
             <p>Developed by Sergey Reizman - 2025</p>
