--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
         <!-- Controls for toggling themes and clearing events -->
         <div class="controls">
             <!-- Button to clear all events from the calendar -->
-            <button class="transparent-button" id="clear-events-btn" aria-label="Clear All Events">Clear All
-                Events</button>
+            <button class="transparent-button" id="clear-events-btn" aria-label="Clear All Events">Clear All Events</button>
 
             <!-- Theme switcher dropdown -->
             <label for="theme-switcher" class="sr-only">Select Theme</label>
@@ -61,7 +60,23 @@
                 </tr>
             </thead>
             <!-- Body of the calendar table where the days will be populated -->
-            <tbody id="calendar-body"></tbody>
+            <tbody id="calendar-body">
+                <!-- Example of a populated day with an event marker -->
+                <tr>
+                    <td>
+                        <div class="event-marker-container">
+                            <div class="event-marker" style="background-color: red; z-index: 10;"></div>
+                        </div>
+                        1
+                    </td>
+                    <td>2</td>
+                    <td>3</td>
+                    <td>4</td>
+                    <td>5</td>
+                    <td>6</td>
+                    <td>7</td>
+                </tr>
+            </tbody>
         </table>
 
         <!-- Modal for managing events -->
@@ -81,12 +96,12 @@
         </footer>
 
         <!-- Link to user's portfolio -->
-        <a href="https://my-simple-portfolio-sergey.netlify.app/" target="_blank" class="transparent-button">Visit My
-            Portfolio</a>
+        <a href="https://my-simple-portfolio-sergey.netlify.app/" target="_blank" class="transparent-button">Visit My Portfolio</a>
 
         <!-- Button to scroll back to the top of the page -->
         <button class="back-to-top-button" id="backToTopBtn" aria-label="Back to Top">Back to Top</button>
     </div>
+
     <!-- Link to the external JavaScript file for functionality -->
     <script src="calendar.js"></script>
 </body>
