--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
         <!-- Footer with developer credits -->
         <footer>
-            <p>Developed by Sergey Reizman - 2025</p>
+            <p>Developed by Sergey Reizman - © 2025</p>
         </footer>
 
         <!-- Link to user's portfolio -->
