--- a/index.html
+++ b/index.html
@@ -71,7 +71,10 @@
                     </td>
                     <td>2</td>
                     <td>3</td>
-                    <td>4</td>
+                    <td class="current-day">
+                        Meeting
+                        <div class="event-tooltip">Details: Team Meeting at 3 PM</div>
+                    </td>
                     <td>5</td>
                     <td>6</td>
                     <td>7</td>
