updated Folder Structure

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <!-- Title of the page -->
     <title>Interactive Calendar</title>
 
-    <!-- Link to the external CSS for styling -->
-    <link rel="stylesheet" href="calendar.css">
+    <!-- Links to the external CSS files for styling -->
+    <link rel="stylesheet" href="css/calendar.variables.css">
+    <link rel="stylesheet" href="css/calendar.core.css">
 </head>
 
 <body>
