--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <!-- Links to the external CSS files for styling -->
     <link rel="stylesheet" href="css/calendar.variables.css">
     <link rel="stylesheet" href="css/calendar.core.css">
+    <link rel="stylesheet" href="css/calendar.greyscale.css">
 </head>
 
 <body>
@@ -43,6 +44,7 @@
                 <option value="light">Light Mode</option>
                 <option value="dark">Dark Mode</option>
                 <option value="ocean">Ocean View</option>
+                <option value="greyscale">Grayscale</option>
             </select>
         </div>
 
