--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="css/calendar.variables.css">
     <link rel="stylesheet" href="css/calendar.core.css">
     <link rel="stylesheet" href="css/calendar.greyscale.css">
+    <link rel="stylesheet" href="css/calendar.autumn-harvest.css">
+
 </head>
 
 <body>
@@ -45,6 +47,7 @@
                 <option value="dark">Dark Mode</option>
                 <option value="ocean">Ocean View</option>
                 <option value="greyscale">Grayscale</option>
+                <option value="autumn-harvest">Autumn Harvest</option>
             </select>
         </div>
 
