serene shores theme addition

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     <link rel="stylesheet" href="css/calendar.core.css">
     <link rel="stylesheet" href="css/calendar.greyscale.css">
     <link rel="stylesheet" href="css/calendar.autumn-harvest.css">
-
+    <link rel="stylesheet" href="css/calendar.serene-shores.css">
+    <link rel="stylesheet" href="css/calendar.ocean-view.css">
+    
 </head>
 
 <body>
@@ -45,11 +47,11 @@
             <select id="theme-switcher" aria-label="Theme Switcher">
                 <option value="light">Light Mode</option>
                 <option value="dark">Dark Mode</option>
-                <option value="ocean">Ocean View</option>
+                <option value="ocean-view">Ocean View</option>
                 <option value="greyscale">Grayscale</option>
                 <option value="autumn-harvest">Autumn Harvest</option>
+                <option value="serene-shores">Serene Shores</option>
             </select>
-        </div>
 
         <!-- Table structure for the calendar -->
         <table>
