--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="css/calendar.autumn-harvest.css">
     <link rel="stylesheet" href="css/calendar.serene-shores.css">
     <link rel="stylesheet" href="css/calendar.ocean-view.css">
-    
+
 </head>
 
 <body>
@@ -40,7 +40,8 @@
         <!-- Controls for toggling themes and clearing events -->
         <div class="controls">
             <!-- Button to clear all events from the calendar -->
-            <button class="transparent-button" id="clear-events-btn" aria-label="Clear All Events">Clear All Events</button>
+            <button class="transparent-button" id="clear-events-btn" aria-label="Clear All Events">Clear All
+                Events</button>
 
             <!-- Theme switcher dropdown -->
             <label for="theme-switcher" class="sr-only">Select Theme</label>
@@ -53,65 +54,66 @@
                 <option value="serene-shores">Serene Shores</option>
             </select>
 
-        <!-- Table structure for the calendar -->
-        <table>
-            <thead>
-                <!-- Table header with days of the week -->
-                <tr>
-                    <th>Sunday</th>
-                    <th>Monday</th>
-                    <th>Tuesday</th>
-                    <th>Wednesday</th>
-                    <th>Thursday</th>
-                    <th>Friday</th>
-                    <th>Saturday</th>
-                </tr>
-            </thead>
-            <!-- Body of the calendar table where the days will be populated -->
-            <tbody id="calendar-body">
-                <!-- Example of a populated day with an event marker -->
-                <tr>
-                    <td>
-                        <div class="event-marker-container">
-                            <div class="event-marker" style="background-color: red; z-index: 10;"></div>
-                        </div>
-                        1
-                    </td>
-                    <td>2</td>
-                    <td>3</td>
-                    <td>4</td>
-                    <td>5</td>
-                    <td>6</td>
-                    <td>7</td>
-                </tr>
-            </tbody>
-        </table>
+            <!-- Table structure for the calendar -->
+            <table>
+                <thead>
+                    <!-- Table header with days of the week -->
+                    <tr>
+                        <th>Sunday</th>
+                        <th>Monday</th>
+                        <th>Tuesday</th>
+                        <th>Wednesday</th>
+                        <th>Thursday</th>
+                        <th>Friday</th>
+                        <th>Saturday</th>
+                    </tr>
+                </thead>
+                <!-- Body of the calendar table where the days will be populated -->
+                <tbody id="calendar-body">
+                    <!-- Example of a populated day with an event marker -->
+                    <tr>
+                        <td>
+                            <div class="event-marker-container">
+                                <div class="event-marker" style="background-color: red; z-index: 10;"></div>
+                            </div>
+                            1
+                        </td>
+                        <td>2</td>
+                        <td>3</td>
+                        <td>4</td>
+                        <td>5</td>
+                        <td>6</td>
+                        <td>7</td>
+                    </tr>
+                </tbody>
+            </table>
 
-        <!-- Modal for managing events -->
-        <div id="event-modal" class="modal">
-            <div class="modal-content">
-                <span class="close-button" aria-label="Close Modal">&times;</span>
-                <h2 id="modal-title">Events for</h2>
-                <div id="event-list" class="event-list"></div>
-                <input type="text" id="event-input" placeholder="Enter new event">
-                <button id="add-event-btn" aria-label="Add Event">Add Event</button>
+            <!-- Modal for managing events -->
+            <div id="event-modal" class="modal">
+                <div class="modal-content">
+                    <span class="close-button" aria-label="Close Modal">&times;</span>
+                    <h2 id="modal-title">Events for</h2>
+                    <div id="event-list" class="event-list"></div>
+                    <input type="text" id="event-input" placeholder="Enter new event">
+                    <button id="add-event-btn" aria-label="Add Event">Add Event</button>
+                </div>
             </div>
+
+            <!-- Footer with developer credits -->
+            <footer>
+                <p>Developed by Sergey Reizman - © 2025</p>
+            </footer>
+
+            <!-- Link to user's portfolio -->
+            <a href="https://my-simple-portfolio-sergey.netlify.app/" target="_blank" class="transparent-button">Visit
+                My Portfolio</a>
+
+            <!-- Button to scroll back to the top of the page -->
+            <button class="back-to-top-button" id="backToTopBtn" aria-label="Back to Top">Back to Top</button>
         </div>
 
-        <!-- Footer with developer credits -->
-        <footer>
-            <p>Developed by Sergey Reizman - © 2025</p>
-        </footer>
-
-        <!-- Link to user's portfolio -->
-        <a href="https://my-simple-portfolio-sergey.netlify.app/" target="_blank" class="transparent-button">Visit My Portfolio</a>
-
-        <!-- Button to scroll back to the top of the page -->
-        <button class="back-to-top-button" id="backToTopBtn" aria-label="Back to Top">Back to Top</button>
-    </div>
-
-    <!-- Link to the external JavaScript file for functionality -->
-    <script src="calendar.js"></script>
+        <!-- Link to the external JavaScript file for functionality -->
+        <script src="calendar.js"></script>
 </body>
 
 </html>
