--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="css/calendar.autumn-harvest.css">
     <link rel="stylesheet" href="css/calendar.serene-shores.css">
     <link rel="stylesheet" href="css/calendar.ocean-view.css">
+    <link rel="stylesheet" href="css/calendar.blue-ice.css">
 
 </head>
 
@@ -52,6 +53,7 @@
                 <option value="greyscale">Grayscale</option>
                 <option value="autumn-harvest">Autumn Harvest</option>
                 <option value="serene-shores">Serene Shores</option>
+                <option value="blue-ice">Blue Ice</option>
             </select>
 
             <!-- Table structure for the calendar -->
