Separated Responsivity Adjustments

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <!-- Links to the external CSS files for styling -->
     <link rel="stylesheet" href="css/calendar.variables.css">
     <link rel="stylesheet" href="css/calendar.core.css">
+    <link rel="stylesheet" href="css/calendar.responsive.css">
     <link rel="stylesheet" href="css/calendar.greyscale.css">
     <link rel="stylesheet" href="css/calendar.autumn-harvest.css">
     <link rel="stylesheet" href="css/calendar.serene-shores.css">
