--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/calendar.variables.css">
     <link rel="stylesheet" href="css/calendar.core.css">
     <link rel="stylesheet" href="css/calendar.responsive.css">
+    <link rel="stylesheet" href="css/calendar.dark-mode.css">
     <link rel="stylesheet" href="css/calendar.greyscale.css">
     <link rel="stylesheet" href="css/calendar.autumn-harvest.css">
     <link rel="stylesheet" href="css/calendar.serene-shores.css">
@@ -46,17 +47,15 @@
                 Events</button>
 
             <!-- Theme switcher dropdown -->
-            <label for="theme-switcher" class="sr-only">Select Theme</label>
             <select id="theme-switcher" aria-label="Theme Switcher">
-                <option value="light">Light Mode</option>
-                <option value="dark">Dark Mode</option>
+                <option value="core">Light Mode</option>
+                <option value="dark-mode">Dark Mode</option>
                 <option value="ocean-view">Ocean View</option>
                 <option value="greyscale">Grayscale</option>
                 <option value="autumn-harvest">Autumn Harvest</option>
                 <option value="serene-shores">Serene Shores</option>
                 <option value="blue-ice">Blue Ice</option>
             </select>
-
             <!-- Table structure for the calendar -->
             <table>
                 <thead>
