--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="css/calendar.greyscale.css">
     <link rel="stylesheet" href="css/calendar.autumn-harvest.css">
     <link rel="stylesheet" href="css/calendar.serene-shores.css">
+    <link rel="stylesheet" href="css/calendar.cherry-garden.css">
     <link rel="stylesheet" href="css/calendar.ocean-view.css">
     <link rel="stylesheet" href="css/calendar.blue-ice.css">
 
@@ -54,7 +55,8 @@
                 <option value="greyscale">Grayscale</option>
                 <option value="autumn-harvest">Autumn Harvest</option>
                 <option value="serene-shores">Serene Shores</option>
-                <option value="blue-ice">Blue Ice</option>
+                <option value="blue-ice">Blue Ice</>
+                <option value="cherry-garden">Cherry Garden</option>
             </select>
             <!-- Table structure for the calendar -->
             <table>
