--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="css/calendar.cherry-garden.css">
     <link rel="stylesheet" href="css/calendar.ocean-view.css">
     <link rel="stylesheet" href="css/calendar.blue-ice.css">
+    <link rel="stylesheet" href="css/calendar.deep-forest.css">
 
 </head>
 
@@ -57,6 +58,7 @@
                 <option value="serene-shores">Serene Shores</option>
                 <option value="blue-ice">Blue Ice</>
                 <option value="cherry-garden">Cherry Garden</option>
+                <option value="deep-forest">Deep Forest</option>
             </select>
             <!-- Table structure for the calendar -->
             <table>
