orange country adding

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <link rel="stylesheet" href="css/calendar.ocean-view.css">
     <link rel="stylesheet" href="css/calendar.blue-ice.css">
     <link rel="stylesheet" href="css/calendar.deep-forest.css">
+    <link rel="stylesheet" href="css/calendar.orange-country.css">
+
 
 </head>
 
@@ -56,9 +58,11 @@
                 <option value="greyscale">Grayscale</option>
                 <option value="autumn-harvest">Autumn Harvest</option>
                 <option value="serene-shores">Serene Shores</option>
-                <option value="blue-ice">Blue Ice</>
+                <option value="blue-ice">Blue Ice</option>
                 <option value="cherry-garden">Cherry Garden</option>
                 <option value="deep-forest">Deep Forest</option>
+                <option value="orange-country">Orange Country</option>
+
             </select>
             <!-- Table structure for the calendar -->
             <table>
