--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="css/calendar.blue-ice.css">
     <link rel="stylesheet" href="css/calendar.deep-forest.css">
     <link rel="stylesheet" href="css/calendar.orange-country.css">
+    <link rel="stylesheet" href="css/calendar.neon-nights.css">
 
 
 </head>
@@ -62,6 +63,8 @@
                 <option value="cherry-garden">Cherry Garden</option>
                 <option value="deep-forest">Deep Forest</option>
                 <option value="orange-country">Orange Country</option>
+                <option value="neon-nights">Neon Nights</option>
+
 
             </select>
             <!-- Table structure for the calendar -->
