--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="css/calendar.deep-forest.css">
     <link rel="stylesheet" href="css/calendar.orange-country.css">
     <link rel="stylesheet" href="css/calendar.neon-nights.css">
-
+    <link rel="stylesheet" href="css/calendar.desert-mirage.css">
 
 </head>
 
@@ -64,7 +64,7 @@
                 <option value="deep-forest">Deep Forest</option>
                 <option value="orange-country">Orange Country</option>
                 <option value="neon-nights">Neon Nights</option>
-
+                <option value="desert-mirage">Desert Mirage</option>
 
             </select>
             <!-- Table structure for the calendar -->
