--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="css/calendar.orange-country.css">
     <link rel="stylesheet" href="css/calendar.neon-nights.css">
     <link rel="stylesheet" href="css/calendar.desert-mirage.css">
+    <link rel="stylesheet" href="css/calendar.lavender-bliss.css">
 
 </head>
 
@@ -65,6 +66,7 @@
                 <option value="orange-country">Orange Country</option>
                 <option value="neon-nights">Neon Nights</option>
                 <option value="desert-mirage">Desert Mirage</option>
+                <option value="lavender-bliss">Lavender Bliss</option>
 
             </select>
             <!-- Table structure for the calendar -->
