--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="css/calendar.neon-nights.css">
     <link rel="stylesheet" href="css/calendar.desert-mirage.css">
     <link rel="stylesheet" href="css/calendar.lavender-bliss.css">
+    <link rel="stylesheet" href="css/calendar.spring-meadow.css">
 
 </head>
 
@@ -67,6 +68,7 @@
                 <option value="neon-nights">Neon Nights</option>
                 <option value="desert-mirage">Desert Mirage</option>
                 <option value="lavender-bliss">Lavender Bliss</option>
+                <option value="spring-meadow">Spring Meadow</option>
 
             </select>
             <!-- Table structure for the calendar -->
